--- a/front/app.less
+++ b/front/app.less
@@ -4,9 +4,44 @@
     height: 200px;
 
     background: #31B64C;
+    border-radius: 4px;
     cursor: pointer;
+
+    transition: background-color 200ms ease;
+
+    &:hover {
+        background: #338644;
+    }
 
     &.paused {
         background: #888;
+        &:hover {
+            background: #666;
+        }
     }
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+body {
+    font-family: calibri;
+    font-size: 1.2em;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.metrics {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
+.explaination {
+    display: block;
+    height: 200px;
 }
