--- a/front/app.less
+++ b/front/app.less
@@ -45,3 +45,14 @@ body {
     display: block;
     height: 200px;
 }
+
+.scan-now {
+    display: block;
+    position: absolute;
+    bottom: 50px;
+    right: 10px;
+    background: rgb(136, 124, 247);
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
