--- a/front/app.less
+++ b/front/app.less
@@ -46,6 +46,13 @@ body {
     height: 200px;
 }
 
+.scan-state {
+    display: block;
+    position: absolute;
+    bottom: 100px;
+    right: 10px;
+    padding: 10px;
+}
 .scan-now {
     display: block;
     position: absolute;
